--- a/SMSForward/app/build.gradle
+++ b/SMSForward/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.darkspede.smsforward.smsforward"
         minSdkVersion 17
